<resources>
    <string name="app_name">MyRuns5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="map">Map</string>
    <string name="how_did_it_go_notes_here">How did it go? Notes here.</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="misc">Misc.</string>
    <string name="metric_kilometers">Metric (Kilometers)</string>
    <string name="imperial_miles">Imperial (Miles)</string>
    <string name="profile_photo">Profile Photo:</string>
    <string name="name">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="email">Email</string>
    <string name="email_hint">Your Email</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Your Phone Number</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="year">Class</string>
    <string name="year_hint">eg. 2012</string>
    <string name="major">Major</string>
    <string name="major_hint">Your Major</string>
    <string name="change">Change</string>
    <string name="date_and_time">Date and Time</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="delete">Delete</string>
    <string name="ui_sensor_service_toast_success_file_updated">Data file updated.</string>
    <string name="ui_sensor_service_toast_success_file_created">Data file created.</string>
    <string name="ui_sensor_service_notification_title">MyRuns Collector</string>
    <string name="ui_sensor_service_notification_content">Recording your activity data now</string>
</resources>