<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/start_guide"
        app:layout_constraintEnd_toStartOf="@+id/end_guide"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <ImageView
                android:id="@+id/img_profilePic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.5"
                android:src="@drawable/drink"
                android:contentDescription="@string/profile_photo" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/btn_changeImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/change"
                android:onClick="onChangePhotoClicked"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="text"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:importantForAutofill="no"
            android:inputType="phone"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>

        <RadioGroup
            android:id="@+id/radioGroup_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radioBut_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/radioBut_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1"/>
        </RadioGroup>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>

        <EditText
            android:id="@+id/editText_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year_hint"
            android:importantForAutofill="no"
            android:inputType="number"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"/>

        <EditText
            android:id="@+id/editText_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/major_hint"
            android:importantForAutofill="no"
            android:inputType="text"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4.1">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/save"
                android:onClick="saveProfile"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/cancel"
                android:onClick="onClickCancel"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>