<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HistoryEntryActivity">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="4dp"
        android:theme="@style/Theme.Artun_Cimensel_MyRuns4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:onClick="deleteEntry"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_type"/>

        <EditText
            android:id="@+id/editText_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_type"/>

        <EditText
            android:id="@+id/editText_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"/>

        <EditText
            android:id="@+id/editText_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"/>

        <EditText
            android:id="@+id/editText_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"/>

        <EditText
            android:id="@+id/editText_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"/>

        <EditText
            android:id="@+id/editText_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"/>

        <EditText
            android:id="@+id/editText_heartRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:enabled="false"
            android:inputType="none"/>

    </LinearLayout>

</LinearLayout>