<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_preferences"
        android:textColor="@color/pineGreen"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <ListView
        android:id="@+id/settingsTab_accountPrefsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/additional_settings"
        android:textColor="@color/pineGreen"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <ListView
        android:id="@+id/settingsTab_additionalSettingsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misc"
        android:textColor="@color/pineGreen"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <ListView
        android:id="@+id/settingsTab_miscList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>